--- a/LooksGood/Looksgood/Looksgood/Experience.rcproject/com.apple.RCFoundation.Project
+++ b/LooksGood/Looksgood/Looksgood/Experience.rcproject/com.apple.RCFoundation.Project
@@ -20,6 +20,7 @@
               "material" : "concrete",
               "overrides" : {
                 "children" : {
+                  "63A9FC24-E5A6-4732-82D4-584ECB772015" : null,
                   "086DC9CD-02D6-471B-A95E-9F7E1276861F" : {
                     "overrides" : {
                       "children" : {
@@ -141,25 +142,25 @@
                   ]
                 ]
               },
-              "physicsMode" : "grid",
+              "physicsMode" : "none",
               "title" : "Spring",
               "viewTransform" : {
                 "cameraTransform" : [
-                  0.97711175680160522,
-                  1.4758051669616634e-08,
-                  0.21272656321525574,
+                  0.97805142402648926,
+                  1.5830488919732488e-08,
+                  0.20836354792118073,
                   0,
-                  -0.013035154901444912,
-                  0.99812090396881104,
-                  0.059873826801776886,
+                  0.0028061468619853258,
+                  0.99990928173065186,
+                  -0.013172184117138386,
                   0,
-                  -0.21232682466506958,
-                  -0.061276346445083618,
-                  0.97527569532394409,
+                  -0.20834462344646454,
+                  0.013467759825289249,
+                  0.9779626727104187,
                   0,
-                  0.064741313457489014,
-                  -0.007729874923825264,
-                  0.48808681964874268,
+                  0.25976589322090149,
+                  0.10140537470579147,
+                  1.8858200311660767,
                   1
                 ],
                 "sceneTransform" : [
@@ -309,7 +310,8 @@
                         1
                       ]
                     }
-                  }
+                  },
+                  "F8A77370-DB68-4A7E-B3B1-973647B160B9" : null
                 },
                 "factory" : null,
                 "runtimeAttributes" : [
@@ -322,7 +324,7 @@
                   ]
                 ]
               },
-              "physicsMode" : "grid",
+              "physicsMode" : "none",
               "title" : "Outsider",
               "viewTransform" : {
                 "cameraTransform" : [
